--- a/docs/2014_GSS.md
+++ b/docs/2014_GSS.md
@@ -1,21 +1,35 @@
----
-title: "Creation of 2014 GSS Data Set"
-author: "Christopher Prener, Ph.D."
-date: '(`r format(Sys.time(), "%B %d, %Y")`)'
-output: 
-  github_document: default
-  html_notebook: default 
----
+Creation of 2014 GSS Data Set
+================
+Christopher Prener, Ph.D.
+(August 30, 2018)
 
 ## Introduction
-This notebook creates the small data set drawn from the 2014 GSS that will be used for August/September 2018 updates to the [`testDriveR`](https://github.com/chris-prener/testDriveR) package.
+
+This notebook creates the small data set drawn from the 2014 GSS that
+will be used for August/September 2018 updates to the
+[`testDriveR`](https://github.com/chris-prener/testDriveR) package.
 
 ## Dependencies
+
 This notebook relies on the following package dependencies:
 
-```{r load-package}
+``` r
 ## tidyverse packages
 library(dplyr)         # data wrangling
+```
+
+    ## 
+    ## Attaching package: 'dplyr'
+
+    ## The following objects are masked from 'package:stats':
+    ## 
+    ##     filter, lag
+
+    ## The following objects are masked from 'package:base':
+    ## 
+    ##     intersect, setdiff, setequal, union
+
+``` r
 library(forcats)       # factor wrangling
 
 ## other packages
@@ -23,20 +37,33 @@ library(foreign)       # read statistics data files
 library(here)          # file path management
 ```
 
-It also has two function dependencies based on the originally exported code that is located in the `source/` folder in the file `GSS.r`. That `GSS.r` file has been broken up into two pieces:
+    ## here() starts at /Users/chris/GitHub/Personal/gss14
 
-1. `read_dat.R` contains a renamed version of the original `read.dat()` function in `GSS.r`
-2. `read_dct.R` contains a renamed version of the original `read.dct()` function in `GSS.r`
+It also has two function dependencies based on the originally exported
+code that is located in the `source/` folder in the file `GSS.r`. That
+`GSS.r` file has been broken up into two pieces:
 
-```{r load-functions}
+1.  `read_dat.R` contains a renamed version of the original `read.dat()`
+    function in `GSS.r`
+2.  `read_dct.R` contains a renamed version of the original `read.dct()`
+    function in `GSS.r`
+
+<!-- end list -->
+
+``` r
 source(here("source", "read_dat.R"))
 source(here("source", "read_dct.R"))
 ```
 
 ## Load Raw Data
-These data were exported from [NORC's GSS website](http://gss.norc.org) along with code for making initial edits to the data themselves. The originally exported data are available in the `data/` folder, and this notebook contains the sequence of functions on lines 33 to 36 of `GSS.r` in the `source/` folder.
 
-```{r read-data}
+These data were exported from [NORC’s GSS website](http://gss.norc.org)
+along with code for making initial edits to the data themselves. The
+originally exported data are available in the `data/` folder, and this
+notebook contains the sequence of functions on lines 33 to 36 of `GSS.r`
+in the `source/` folder.
+
+``` r
 GSS_metadata <- read_dct(here("data", "GSS.dct"))
 GSS_ascii <- read_dat(here("data", "GSS.dat"), GSS_metadata)
 attr(GSS_ascii, "col.label") <- GSS_metadata[["ColLabel"]]
@@ -44,9 +71,12 @@ GSS <- GSS_ascii
 ```
 
 ## Reformat Variables
-Since all of the variables are numeric, this section reformats them as factor when necessary. The first chunk cleans the `BALLOT`, `INCOM16`, `REG16`, `RACE`, and `SEX` variables for the clean version of the data:
 
-```{r recode-1}
+Since all of the variables are numeric, this section reformats them as
+factor when necessary. The first chunk cleans the `BALLOT`, `INCOM16`,
+`REG16`, `RACE`, and `SEX` variables for the clean version of the data:
+
+``` r
 GSS %>%
   mutate(BALLOT = ifelse(BALLOT == 0, NA, BALLOT)) %>%
   mutate(BALLOT = fct_recode(as.factor(BALLOT),
@@ -88,9 +118,12 @@ GSS %>%
   )) -> gss14
 ```
 
-The second chunk cleans the `SPDEG`, `MADEG`, `PADEG`, and `DEGREE` variables for the clean version of the data:
+    ## Warning: Unknown levels in `f`: 4
 
-```{r recode-2}
+The second chunk cleans the `SPDEG`, `MADEG`, `PADEG`, and `DEGREE`
+variables for the clean version of the data:
+
+``` r
 gss14 %>%
   mutate(SPDEG = ifelse(SPDEG >= 7, NA, SPDEG)) %>%
   mutate(SPDEG = fct_recode(as.factor(SPDEG),
@@ -126,9 +159,10 @@ gss14 %>%
   )) -> gss14
 ```
 
-The third chunk cleans the `CHILDS`, `SPWRKSLF`, `SPHRS1`, `MARITAL`, `WRKSLF`, and `HRS1` variables for the clean version of the data:
+The third chunk cleans the `CHILDS`, `SPWRKSLF`, `SPHRS1`, `MARITAL`,
+`WRKSLF`, and `HRS1` variables for the clean version of the data:
 
-```{r recode-3}
+``` r
 gss14 %>%
   mutate(CHILDS = ifelse(CHILDS == 9, NA, CHILDS)) %>%
   mutate(CHILDS = fct_recode(as.factor(CHILDS),
@@ -156,9 +190,10 @@ gss14 %>%
   )) -> gss14
 ```
 
-The final chunk cleans the `WRKSTAT` and `INCOME06` variables for the clean version of the data:
+The final chunk cleans the `WRKSTAT` and `INCOME06` variables for the
+clean version of the data:
 
-```{r recode-4}
+``` r
 gss14 %>%
   mutate(WRKSTAT = ifelse(WRKSTAT == 0 | WRKSTAT == 9, NA, WRKSTAT)) %>%
   mutate(WRKSTAT = fct_recode(as.factor(WRKSTAT),
@@ -202,13 +237,15 @@ gss14 %>%
 ```
 
 ## Export Data
+
 This final section creates the package versions of the data:
 
-```{r export-data}
+``` r
 save(gss14, file = here("data", "gss14.rda"))
 
 gss14_simple <- GSS
 save(gss14_simple, file = here("data", "gss14_simple.rda"))
 ```
 
-These are then manually copied into `testDriveR` (to keep the package size to a minimum).
+These are then manually copied into `testDriveR` (to keep the package
+size to a minimum).
